--- a/resources/CSS/flexboxGrid.html
+++ b/resources/CSS/flexboxGrid.html
@@ -9,9 +9,9 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Profile</a></li>
+            <li><a href="../../index.html">Home</a></li>
+            <li><a href="grid.html">Grid</a></li>
+            <li><a href="latihan2.html">Latihan 1</a></li>
         </ul>
     </nav>
 
